--- a/code/assets/css/footer.css
+++ b/code/assets/css/footer.css
@@ -1,3 +1,24 @@
-.footerH2{
-    color: red;
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: black;
+}
+
+.footerTexto {
+}
+
+.footerRedes {
+    display: flex;
+    gap: 0.5em;
+}
+
+.footerRedes div{
+    background-color: #1156CC;
+    padding: 1em;
+    border-radius: 10px;
+}
+
+.footerDerechos{
 }
