Añadiendo archivos CSS

--- a/app/assets/css/inicio.css
+++ b/app/assets/css/inicio.css
@@ -1,9 +1,6 @@
 /* ==================================================================================================================
-    ------------------------------------------------- MOBILE FIRST -------------------------------------------------
+    ------------------------------------------------- INICIO SIEMPRE -------------------------------------------------
 ================================================================================================================== */
-
-
-
 
 .inicioMain {
     display: flex;
@@ -46,18 +43,4 @@
 
 .inicioCategorias img {
     width: 2em;
-}
-
-/* ==================================================================================================================
-    ---------------------------------------------- RESPONSIVE TABLET -----------------------------------------------
-================================================================================================================== */
-
-/* Medida principal Tablet*/
-@media (min-width: 768px) {
-}
-
-/* ==================================================================================================================
-    ---------------------------------------------- RESPONSIVE DESKTOP ----------------------------------------------
-================================================================================================================== */
-@media (min-width: 1200px) {
 }
