--- a/app/assets/css/editarAnuncio.css
+++ b/app/assets/css/editarAnuncio.css
@@ -105,7 +105,7 @@ textarea.editarInput::placeholder {
 
 .editarFormulario .editarBoton {
     display: block;
-    margin: 1rem auto 0;
+    margin: 3rem 1em 0;
     background-color: #2563eb;
     color: white;
     padding: 0.875rem 3rem;
@@ -124,6 +124,29 @@ textarea.editarInput::placeholder {
 
 .editarFormulario .editarBoton:active {
     transform: translateY(0);
+}
+
+.editarBotones{
+    display: flex;
+    justify-content: center;
+}
+
+.editarBotonAtras{
+    display: block;
+    margin: 3rem 1em 0;
+    background-color: white;
+    padding: 0.875rem 3rem;
+    border: 2px solid #2563eb;
+    border-radius: 8px;
+    font-size: 1rem;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all 0.3s ease;  
+}
+
+.editarBotonAtras a {
+    text-decoration: none;
+    color: #2563eb;
 }
 
 @media (max-width: 768px) {
