--- a/app/assets/css/header.css
+++ b/app/assets/css/header.css
@@ -288,6 +288,11 @@ header {
     color: #1156CC;
 }
 
+.loginError {
+    color: red; 
+    margin-bottom: 10px;
+}
+
 .choice-buttons {
     display: flex;
     gap: 10px;
