--- a/app/assets/css/misAnuncios.css
+++ b/app/assets/css/misAnuncios.css
@@ -22,30 +22,32 @@
     gap: 1.5em;
     width: 100%;
     max-width: 1200px;   
-    margin: 8em auto;  
+    margin: 2em;
+    margin-left: 8em;
+    margin-right: 8em;  
 }
 /*Filtros: */
     .misAnunciosFiltros{
-        display: flex;
-        flex-direction: column;
-    max-width: 40%;
+    display: flex;
+    flex-direction: column;
+    width: 40%;
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     padding: .5rem;
     
 }
 .misAnunciosCategoria {
-  display: flex;
-  flex-direction: row;
-  align-items: center;   /* centra verticalmente imagen + texto */
-  gap: 0.6rem;
-  white-space: nowrap;   /* evita que el texto realice wrap debajo del icono */
-  overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    align-items: center;   /* centra verticalmente imagen + texto */
+    gap: 0.6rem;
+    white-space: nowrap;   /* evita que el texto realice wrap debajo del icono */
+    overflow: hidden;
 }
 .misAnunciosCategoria img {
-  width: 22px;
-  height: 22px;
-  object-fit: contain;
-  display: block;
+    width: 22px;
+    height: 22px;
+    object-fit: contain;
+    display: block;
 }
     .misAnunciosFiltros h4 {
     text-align: center;
@@ -82,9 +84,8 @@
     .misAnunciosFiltros li:hover {
     border-bottom: solid #1156CC thin;
 }
-
     .misAnunciosContenido{
-        max-width: 60%;
+        max-width: 80%;
     }
     .misAnunciosContenido h3{
         color:#1156CC;
@@ -93,51 +94,52 @@
         
     }
 /*Búsqueda:*/
-    .formularioBusqueda {
+    .misAnunciosformularioBusqueda {
     display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  background: white;
-  border-radius: 25px;
-  overflow: hidden;
-  gap: 0;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    background: white;
+    overflow: hidden;
+    gap: 0;
+    border-radius: 1em;
+    margin-bottom: 1em;
     }
 
-    .formularioBusqueda select{
-    padding: .8em;
+    .misAnunciosformularioBusqueda select{
+    padding: .5em;
     margin: none;
     font-size: 0.95rem;
-    border: none;
+    border: .1em solid black;
     color: white;
     background-color: #1156CC;
-    width: 25%;
+    border-radius: 1em 0em 0em 1em;
+    width: 40%;
 }
-    .formularioBusqueda select option{
+    .misAnunciosformularioBusqueda select option{
     background-color: white;
     color: #1156CC;
 }
-    .formularioBusqueda [type="search"]{
-    padding: .6em;
-    border-radius: 6px;
-    border: .2em solid #1156CC;
+    .misAnunciosformularioBusqueda [type="search"]{
+    padding: .5em;
+    border: .1em solid #1156CC;
     font-size: 0.95rem;
     width: 60%;
+    border-radius: 0;
+    
 }
     
-    .formularioBusqueda button {
+    .misAnunciosformularioBusqueda button {
     background-color: #1156CC;
     width: 20%;
     color: white;
-    border: none;
-    padding: 1em ;
-    border-radius: 6px;
+    border: .1em solid black;
+    padding: .7em ;
     cursor: pointer;
     display: flex;
-  align-items: center;
-  gap: 0.3rem;
-  border-radius: 0 25px 25px 0;
-  font-weight: 500;
+    align-items: center;
+    border-radius: 0em 1em 1em 0em;
+    font-weight: 500;
 }
 /*Anuncios: */
     .misAnunciosLista{
@@ -146,12 +148,26 @@
     gap: 1em;
     
 }
+.misAnunciosInfo {
+    padding: 1rem 1.25rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+.misAnunciosDetalles {
+    display: flex;
+    
+    width: 100%;
+    
+}
     .misAnunciosAnuncioCard{
         display: flex;  
         overflow: hidden;   /*Recorta la imagen a los bordes */
         box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         border-radius: 1em;
-
+        
     }
     .misAnunciosAnuncioCard:hover{
        transform: scale(1.03);
@@ -169,13 +185,27 @@
     object-position: center; 
     
 }
-    .misAnunciosInfo {
-    padding: 1rem 1.25rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    
+    .desc{
+        font-size: small;
+        font-style: italic;
+    }
+    .misAnunciosPrecio{
+    font-weight: bolder;
 }
-
+    .misAnunciosEdicion{
+        display: flex;
+        justify-content: flex-end;
+    }
+    
+    .misAnunciosEdicion [type="button"] {
+        border: none;
+        color:#1156CC;
+    }
+    .misAnunciosEdicion [type="button"] :hover{
+        background-color: #1156CC;
+        color: white;
+    }
 
 /* Paginación */
     .misAnunciosPaginas {
