--- a/app/assets/css/favoritos.css
+++ b/app/assets/css/favoritos.css
@@ -14,7 +14,7 @@
     padding: 0;
     background-color: #f9f9f9;
 }
-    .FiltradoMain {
+    .FavoritoMain {
     display: flex;
     flex-direction: row;
     gap: 2em;
@@ -26,32 +26,32 @@
     margin: 8em auto;  
 }
 /*Filtros: */
-    .filtradoCategorias{
+    .FavoritoCategorias{
     max-width: 40%;
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     padding: .5rem;
     height: fit-content;
     
 }
-    .filtradoCategorias h4 {
+    .FavoritoCategorias h4 {
     text-align: center;
     margin-bottom: 1em;
     color: #1156CC;
     border-bottom: solid #1156CC thin;
 }
-    .filtradoCategorias img {
+    .FavoritoCategorias img {
     width: 22px;
     height: 22px;
     object-fit: contain;
 }
-.filtradoCategorias a {
+.FavoritoCategorias a {
     color: black;
     text-decoration: none;
     font-weight: 500;
     font-size: 0.95rem;
    
 }
-    .filtradoCategorias ul {
+    .FavoritoCategorias ul {
     list-style: none;
     padding: 0;
     margin: 0;
@@ -60,7 +60,7 @@
     gap: 0.4rem;
     
 }
-    .filtradoCategorias li {
+    .FavoritoCategorias li {
     margin: 0.3em 0;
     display: flex;
     align-items: center;
@@ -68,21 +68,21 @@
     padding: 0.1rem 0.5rem;
     border-radius: 8px;
 }
-    .filtradoCategorias li:hover {
+    .FavoritoCategorias li:hover {
     border-bottom: solid #1156CC thin;
 }
 
-    .filtradoAnuncioContenido{
+    .favoritoAnuncioContenido{
         max-width: 60%;
     }
-    .filtradoAnuncioContenido h3{
+    .favoritoAnuncioContenido h3{
         color:#1156CC;
         margin-bottom: .3em;
         
         
     }
 /*Búsqueda:*/
-    .formularioBusqueda select{
+    .favoritoFormularioBusqueda select{
     padding: 0.5rem 1rem;
     border-radius: 6px;
     border: 1px solid #1156CC;
@@ -90,24 +90,24 @@
     color: white;
     background-color: #1156CC;
 }
-    .formularioBusqueda select option{
+    .favoritoFormularioBusqueda select option{
     background-color: white;
     color: #1156CC;
 }
-    .formularioBusqueda [type="search"]{
+    .favoritoFormularioBusqueda [type="search"]{
     padding: 0.5rem 1rem;
     border-radius: 6px;
     border: .2em solid #1156CC;
     font-size: 0.95rem;
     width: 60%;
 }
-    .formularioBusqueda {
+    .favoritoFormularioBusqueda {
     display: flex;
     align-items: center;
     gap: 1rem;
     margin-bottom: 2rem;
     }
-    .formularioBusqueda button {
+    .favoritoFormularioBusqueda button {
     background-color: #1156CC;
     color: white;
     border: none;
@@ -116,25 +116,25 @@
     cursor: pointer;
 }
 /*Anuncios: */
-    .anuncioListado{
+    .favoritoAnuncioListado{
     display: flex;
     flex-direction: column;
     gap: 1em;
     
 }
-    .anuncioListadoCard{
+    .favoritoAnuncioCard{
         display: flex;  
         overflow: hidden;   /*Recorta la imagen a los bordes */
         box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         border-radius: 1em;
 
     }
-    .anuncioListadoImagen{
+    .favoritoAnunciosImagen{
         width: 50%;
         min-width: 180px;
         
     }
-    .anuncioListadoImagen img {
+    .favoritoAnunciosImagen img {
     display: block;           /* elimina gaps por inline images */
     width: 100%;
     height: 100%;
@@ -142,7 +142,7 @@
     object-position: center; 
     
 }
-    .misAnunciosInfo {
+    .favortioAnunciosInfo {
     padding: 1rem 1.25rem;
     display: flex;
     flex-direction: column;
@@ -151,14 +151,14 @@
 
 
 /* Paginación */
-    .misAnunciosPaginas {
+    .favoritoAnunciosPaginas {
     display: flex;
     justify-content: center;
     gap: 0.5rem;
     margin-top: 2rem;
 }
 
-    .paginaBtn {
+    .favoritoPaginaBtn {
     background-color: #989898;
     color: white;
     font-weight: 750;
@@ -168,7 +168,7 @@
     cursor: pointer;
 }
 
-    .paginaBtn:hover {
+    .favoritoPaginaBtn:hover {
     background-color: #1156CC;
 }
 
@@ -177,26 +177,15 @@
     color: white;
 }
     
-
-
-.favoritosMain {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.favoritoToggle {
+  color: black;
+  text-decoration: none;
+  font-weight: 500;
+  margin-top: 0.5em;
+  display: inline-block;
+  transition: color 0.3s ease;
 }
 
-
-
-
-.btnFavorito {
-  background: none;
-  border: none;
-  color: #888;
-  cursor: pointer;
-}
-
-.btnFavorito.favoritoActivo {
+.favoritoToggle.favoritoActivo {
   color: red;
-  font-weight: bold;
 }
