--- a/app/assets/css/ajustes.css
+++ b/app/assets/css/ajustes.css
@@ -85,7 +85,7 @@
     transform: translateY(0);
 }
 
-.ajustesBotonAtras{
+.ajustesBotonAtras {
     display: block;
     margin: 3rem 1em 0;
     background-color: white;
@@ -96,12 +96,12 @@
     font-weight: 600;
     cursor: pointer;
     transition: all 0.3s ease;  
+
+    text-decoration: none;  /* quitar subrayado */
+    color: #2563eb;         /* mantener color azul */
+    text-align: center;     /* opcional para centrar texto */
 }
 
-.ajustesBotonAtras a {
-    text-decoration: none;
-    color: #2563eb;
-}
 
 #mensajeResultado {
     max-width: 1100px;
