Editar usuario + Otras cosas

--- a/app/assets/css/favoritos.css
+++ b/app/assets/css/favoritos.css
@@ -207,7 +207,7 @@
 }
 
 .favoritoToggle.favoritoActivo {
-  color: yellow;
+  color: #FFBB00;
 }
 
  /* ===================== PAGINACIÓN ===================== */
